--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,13 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+$RNFirebaseAsStaticFramework = true
 platform :ios, '11.0'
 
 target 'bitlo' do
   config = use_native_modules!
-  use_frameworks! :linkage => :static
+  # use_frameworks! :linkage => :static
+  use_frameworks!
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
