--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
   "dependencies": {
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
+    "@react-native-firebase/firestore": "^15.1.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
+    "firebase": "^9.8.4",
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-gesture-handler": "^2.5.0",
-    "react-native-svg": "^12.3.0"
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,7 +35,9 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
