--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "apisauce": "^2.1.5",
     "axios": "^0.27.2",
     "firebase": "^9.8.4",
     "react": "17.0.2",
@@ -26,6 +27,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1"
   },
