--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^15.1.1",
-    "@react-native-firebase/auth": "^15.1.1",
-    "@react-native-firebase/firestore": "^15.1.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -24,12 +21,9 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-svg": "^12.3.0",
-    "react-native-toast-message": "^2.1.5",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
